# global-cache-adaptor

./: CMakeLists.txt  NOTICE.txt  README.en.md  README.md  build.sh
package/: globalcache-adaptorlib_pack.sh
patch/: README.md  ceph-global-cache-tls.patch  ceph-global-cache.patch  globalcache-ceph-adaptor-server.patch  globalcache-ceph-adaptor-spec.patch
src/: CMakeLists.txt
src/ceph_proxy/: CMakeLists.txt  CcmAdaptor.cc  CcmAdaptor.h  CephExport.h  CephMsgr.cc  CephMsgr.h  CephProxy.cc  CephProxy.h  CephProxyFtds.cc  CephProxyFtds.h  CephProxyInterface.cc  CephProxyInterface.h  CephProxyLog.h  CephProxyOp.cc  CephProxyOp.h  ConfigRead.cc  ConfigRead.h  Gcbufferlist.h  PoolContext.h  RadosMonitor.cc  RadosMonitor.h  RadosWorker.cc  RadosWorker.h  RadosWrapper.cc  RadosWrapper.h  RbdWrapper.cc  utils.h
src/dependency/include/: sa_def.h  sa_export.h
src/server_adaptor/: CMakeLists.txt  ClassHandler.cc  ClassHandler.h  class_api.cc  client_op_queue.h  config_read.cpp  config_read.h  msg_module.cpp  msg_module.h  msg_perf_record.cc  msg_perf_record.h  network_module.cpp  network_module.h  objclass.h  osa.cpp  osa.h  sa_ftds_osa.h  sa_server_dispatcher.cpp  sa_server_dispatcher.h  salog.cpp  salog.h
